base/guacd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
spec:
  selector:
    app: guacd
  ports:
  - protocol: TCP
    port: 4822
    targetPort: 4822
